[gd_scene load_steps=6 format=3 uid="uid://6eoom28ynb61"]

[ext_resource type="Texture2D" uid="uid://d1fls88gscr7o" path="res://assets/arrowU.png" id="1_0u34w"]
[ext_resource type="Script" uid="uid://bi626kh1t0444" path="res://scripts/BuildingUI.gd" id="1_6xcvk"]
[ext_resource type="Texture2D" uid="uid://c8acarya2pgpl" path="res://assets/arrowD.png" id="2_6xcvk"]
[ext_resource type="Theme" uid="uid://ud3170ur0um7" path="res://themes/kenneyUI-blue.tres" id="2_75hpm"]
[ext_resource type="Theme" uid="uid://h1f7iqhh7ycb" path="res://themes/kenneyUI-yellow.tres" id="3_m3dje"]

[node name="BuildingUI" type="CanvasLayer"]
script = ExtResource("1_6xcvk")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_75hpm")
theme_override_constants/margin_left = 600
theme_override_constants/margin_top = 300
theme_override_constants/margin_right = 600
theme_override_constants/margin_bottom = 400

[node name="Panel" type="Panel" parent="MarginContainer"]
custom_minimum_size = Vector2(700, 300)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Variable" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="VariableName" type="Label" parent="MarginContainer/Panel/MarginContainer/Variable"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Название характеристики"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/Variable"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="value" type="Label" parent="MarginContainer/Panel/MarginContainer/Variable/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "1000"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/Variable/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="UpButton" type="Button" parent="MarginContainer/Panel/MarginContainer/Variable/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_m3dje")
theme_override_colors/icon_normal_color = Color(0.26, 0.276, 0.5, 1)
icon = ExtResource("1_0u34w")
icon_alignment = 1
expand_icon = true

[node name="DownButton" type="Button" parent="MarginContainer/Panel/MarginContainer/Variable/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_m3dje")
icon = ExtResource("2_6xcvk")
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/Variable"]
layout_mode = 2

[node name="ProductionSpeed" type="Label" parent="MarginContainer/Panel/MarginContainer/Variable/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_font_sizes/font_size = 25
text = "Скорость производства:"

[node name="SuccessChance" type="Label" parent="MarginContainer/Panel/MarginContainer/Variable/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_font_sizes/font_size = 25
text = "Шанс успеха:"

[node name="StationName" type="Label" parent="MarginContainer/Panel/MarginContainer/Variable"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Название  станции"
autowrap_mode = 2
